[package]
name = "ben"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
comfy-table = "7.0.1"
itertools = "0.11.0"
itr = { git = "https://github.com/rana/itr.git", version = "0.1.0" }
sptr = { version = "0.3.2", features = ["opaque_fn"] }
threadpool = "1.8.1"
